[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "said"
version = "0.3.0"
description = "Blendshape-based Audio-driven Speech Animation with Diffusion"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "inkyupark", email = "inkyupark@krafton.com" },
]
dependencies = [
    "diffusers[torch]==0.12.1",
    "einops",
    "librosa",
    "numpy",
    "pandas",
    "pillow",
    "scipy",
    "torch",
    "torchaudio",
    "tqdm",
    "transformers",
    "trimesh",
]

[project.optional-dependencies]
test = [
    "accelerate==0.16.0",
    "qpsolvers",
    "tensorboard",
]
style = [
    "black",
]
dev = [
    "said[style, test]",
]

[tool.setuptools]
packages = ["said"]

[tool.black]
include = '''
/(
    blender-addon
  | said
  | script
)/.*\.py$
'''
